--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
     <title>Word Scramble Game</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets\style.css">
+    <script src="app.js"></script>
+
 </head>
 
 <body>
-    <script src="app.js"></script>
-</body>
 <main>
-
+    <h1>Header</h1>
 </main>
+</body>
+
+
 </html>
