Add JS text connected

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="">
     <title>Word Scramble Game</title>
     <link rel="stylesheet" href="assets\style.css">
-    <script src="app.js"></script>
-
+    
 </head>
 
 <body>
-<main>
-    <h1>Header</h1>
-</main>
+    <!--This is where the main game play will take place-->
+    <!--Will use JavaScript to select the game area into a useable object-->
+    
+    <div class="gameArea"></div>
+<script src="app.js"></script>
 </body>
 
 
