--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <!--Will use JavaScript to select the game area into a useable object-->
     
     <div class="gameArea"></div>
+    <h1>hi</h1>
 <script src="app.js"></script>
 </body>
 
 
-</html>
+</html
