--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
     <div class="gameArea"></div>
 
+    <script src="js\words.js"></script>
     <script src="js/app.js"></script>
-    <script src="js\words.js"</script>
+    
 </body>
 
 
-</html
+</html>
