Edit so scoreboard will say out of 5

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
 
-    <div class="gameArea"></div>
+    <div class="gameArea">
+        <!-- <p id="output"></p> -->
+    </div>
 
     <script src="js\words.js"></script>
     <script src="js/app.js"></script>
