Remove output variable from start of game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <!--Will use JavaScript to select the game area into a useable object-->
 
     <div class="gameArea">
-        <!-- <p id="output"></p> -->
+       <!-- Added html from DevTools so can see what I'm doing!  -->
+        <!-- <div class="div_scoreBoard" style="display: none;"></div>
+        <div class="click_button">Click that button</div>
+        <input type="text" class="myInput" style="display: none;">
+        <button class="btn_start">START GAME</button>
+        <button id="btn_refresh" style="display: none;">Refresh</button> -->
     </div>
 
     <script src="js\words.js"></script>
