Add fontawesome correct - incorrect

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <title>Word Scramble Game</title>
     <link rel="stylesheet" href="assets\style.css">
+    <script src="https://kit.fontawesome.com/5e56d2dc1d.js" crossorigin="anonymous"></script>
 
 </head>
 
