--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
 
-    <div class="gameArea">
+    <div id="game-area">
        <!-- Added html from DevTools so can see what I'm doing!  -->
         <!-- <div class="div_scoreBoard" style="display: none;"></div>
         <div class="click_button">Click that button</div>
