--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="btn_start">START GAME</button>
         <button id="btn_refresh" style="display: none;">Refresh</button> -->
     </div>
+    <div></div>
 
     <script src="js\words.js"></script>
     <script src="js/app.js"></script>
