--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Test  -->
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
 
