Test git hookup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <!-- Test  -->
+    <!-- test 2 -->
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
 
