Test3 hookup git

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <!-- Test  -->
-    <!-- test 2 -->
+    <!-- Test3  -->
+    
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
 
