Edit placeholder text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Will use JavaScript to select the game area into a useable object-->
 
     <div id="game-area">
-   <textarea id = "input-word" placeholder = 'Enter to Skip'></textarea>
+   <textarea id = "input-word" placeholder = 'Press Enter to Skip'></textarea>
        <!-- Added html from DevTools so can see what I'm doing!  -->
         <!-- <div class="div_scoreBoard" style="display: none;"></div>
         <div class="click_button">Click that button</div>
