Rearrange files and folders

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>Word Scramble Game</title>
-    <link rel="stylesheet" href="assets\style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <script src="https://kit.fontawesome.com/5e56d2dc1d.js" crossorigin="anonymous"></script>
 
 </head>
@@ -18,7 +18,7 @@
     <!--Will use JavaScript to select the game area into a useable object-->
 
     <div id="game-area">
-   <textarea id = "input-word" placeholder = 'Press Enter to Skip'></textarea>
+   <textarea id = "input-word" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
        <!-- Added html from DevTools so can see what I'm doing!  -->
         <!-- <div class="div_scoreBoard" style="display: none;"></div>
         <div class="click_button">Click that button</div>
@@ -28,8 +28,8 @@
     </div>
     <div></div>
 
-    <script src="js\words.js"></script>
-    <script src="js/app.js"></script>
+    <script src="assets/js/words.js"></script>
+    <script src="assets/js/script.js"></script>
     
 </body>
 
