Change name of restart btn and change input-text back to class

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section class = game-play>
             <div id="game-area">
-                <textarea id = "input-word" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
+                <textarea id = "input-word" name = "input word text" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
        <!-- Added html from DevTools so can see what I'm doing!  -->
         <!-- <div class="div_scoreBoard" style="display: none;"></div>
         <div class="click_button">Click that button</div>
