Edit html add class input-text

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!--This is where the main game play will take place-->
     <!--Will use JavaScript to select the game area into a useable object-->
     <main>
-        <section class = game-play>
+        <section class = "game-play">
             <div id="game-area">
-                <textarea id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
+                <textarea class = "input-text" id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
        <!-- Added html from DevTools so can see what I'm doing!  -->
         <!-- <div class="div_scoreBoard" style="display: none;"></div>
         <div class="click_button">Click that button</div>
