Removed commented html

--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
     <main>
         <section class = "game-play">
             <div id="game-area">
-                <textarea class = "input-text" id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here"></textarea>
-       <!-- Added html from DevTools so can see what I'm doing!  -->
-        <!-- <div class="div_scoreBoard" style="display: none;"></div>
-        <div class="click_button">Click that button</div>
-        <input type="text" class="myInput" style="display: none;">
-        <button class="btn_start">START GAME</button>
-        <button id="btn_refresh" style="display: none;">Refresh</button> -->
+                <textarea class = "input-text" id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here">
+                </textarea>
             </div>
         </section>
     </main>
