--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Jessica Clark">
     <title>Word Scramble Game</title>
     <link rel="stylesheet" href="assets/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto:wght@300&display=swap');
+      </style>
     <script src="https://kit.fontawesome.com/5e56d2dc1d.js" crossorigin="anonymous"></script>
 
 </head>
