--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class = "game-play">
             <div id="game-area">
-                <h1 class "title-game" id="heading-wordscramble">Word Scramble</h1>
+                <h1 id="heading-wordscramble" display = "hidden">Word Scramble</h1>
                 <textarea class = "input-text" id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here">
                 </textarea>
             </div>
