Working on adding code to check for only letters

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <section class = "game-play">
             <div id="game-area">
                 <h1 id="heading-wordscramble">Word Scramble</h1>
-                <textarea class = "input-text" id = "input-word" name = "input word text" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here">
+                <textarea class = "input-text" id = "input-word" name = "inputtext" 
+                autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here" 
+                onclick="lettersOnlyCheck(document.inputtext.name)">
                 </textarea>
             </div>
         </section>
