Attempt to make input only accept letters

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
         <section class = "game-play">
             <div id="game-area">
                 <h1 id="heading-wordscramble">Word Scramble</h1>
-                <textarea class = "input-text" id = "input-word" name = "inputtext" 
-                autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type word here" 
-                onclick="lettersOnlyCheck(document.inputtext.name)">
-                </textarea>
+                <input type = "text" class = "input-text" id = "input-word" name = "inputtext" 
+                autocomplete = "off" spellcheck="off" placeholder = 'Press Enter to Skip' aria-label="Type word here">
+            </input>
             </div>
         </section>
     </main>
