Update Textarea only accept letters

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
         <section class = "game-play">
             <div id="game-area">
                 <h1 id="heading-wordscramble">Word Scramble</h1>
-                <textarea class = "input-text" id = "input-word" name = "inputtext" 
+                <input type="text" class ="input-text" id = "input-word" name = "inputtext" 
+                autocomplete = "off" spellcheck = "false" placeholder = 'Press Enter to Skip' aria-label="Type     word here" onkeypress="return (event.charCode > 64 && 
+	event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
+                <!-- <textarea class = "input-text" id = "input-word" name = "inputtext" 
                 autocorrect = "off" spellcheck="false" autocomplete = "off" = 'Press Enter to Skip' 
                 onkeypress="allowOnlyLetters" aria-label="Type word here" onkeypress="return (event.charCode > 64 && 
                 event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
-            </textarea>
+            </textarea> -->
             </div>
         </section>
     </main>
