--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="anagram, game, guessing, words, scramble, animals">
     <meta name="author" content="Jessica Clark">
     <title>Word Scramble Game</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto:wght@300&display=swap');
       </style>
