Style anchor link to github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer class = "footer__link">
-        <p>https://github.com/jeskodes</p>
+        <a href = "https://github.com/jeskodes" target = "_blank">https://github.com/jeskodes</a>
     </footer>
 
     
