--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 <input type="text" class ="input-text" id = "input-word" name = "inputtext" 
                 autocomplete = "off" spellcheck = "false" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type     word here" onkeypress="return (event.charCode > 64 && 
 	event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
+    <ul id="rules">
+        <li class = "list-intro">Unscramble the animal words</li>
+        <li class = "list-intro">Press enter to skip</li>
+        <li class = "list-intro">5 turns then play again </li>
+    </ul>
 <!-- 
     //from https://www.includehelp.com/code-snippets/allow-only-alphabets-in-input-field-in-javascript.aspx -->
                 
