Change padding of header

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 autocomplete = "off" spellcheck = "false" autocomplete = "off" placeholder = 'Press Enter to Skip' aria-label="Type     word here" onkeypress="return (event.charCode > 64 && 
 	event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
     <div class = "div-rules"></div><ul id="rules">
-        <li class = "list-intro">Unscramble the animal words</li>
-        <li class = "list-intro">Press enter to skip</li>
-        <li class = "list-intro">5 turns then play again </li>
+        <li class = "list-intro">Unscramble the Animal!</li>
+        <li class = "list-intro">Press Enter to Skip</li>
+        <li class = "list-intro">5 Turns then Play Again </li>
     </ul><div>
 <!-- 
     //from https://www.includehelp.com/code-snippets/allow-only-alphabets-in-input-field-in-javascript.aspx -->
