--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="anagram, game, guessing, words, scramble, animals">
+    <meta name="description" content="An animal anagram game">
+    <meta name=”keywords” content=”brain-training, conundrum, letters and words, anagram, game, guessing, words, scramble, animals” />
     <meta name="author" content="Jessica Clark">
     <title>Word Scramble Game</title>
+    <link rel="assets\images\rainbow-background.jpg" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/5e56d2dc1d.js" crossorigin="anonymous"></script>
     
