--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ https://www.includehelp.com/code-snippets/allow-only-alphabets-in-input-field-in
     </main>
 
     <footer class = "footer__link">
-        <a href = "https://github.com/jeskodes" target = "_blank">https://github.com/jeskodes</a>
+        <a href = "https://github.com/jeskodes" target = "_blank"><i class="fa-brands fa-github"></i>
+            https://github.com/jeskodes</a>
+            
     </footer>
 
     <script src="assets/js/words.js"></script>
