Update html and css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
     <header>
-
+<!-- The Javascript for this project is based on Udemy Tutorial by Laurence Svekis:
+    "JavaScript Create 5 Fun Word Games".  The only html used from the course is:
+    <"div id="game-area">. -->
     </header>
 
     <main>
@@ -31,7 +33,6 @@
                 placeholder = 'Press Enter to Skip' aria-label="Type word here" 
                 onkeypress="return (event.charCode > 64 && 
 	            event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
-
 
             <div class = "div-rules">
                 <ul id="rules">
