--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/images/favicon/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/android-chrome-192x192.png">
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/5e56d2dc1d.js" crossorigin="anonymous"></script>
     
