--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class = "game-play">
             <div id="game-area">
-                <h1 id="heading-wordscramble">Word Scramble</h1>
+                <h1 id="heading-wordscramble">Animal Scramble</h1>
                 <input type="text" class ="input-text" id = "input-word" name = "inputtext" 
                 autocomplete = "off" spellcheck = "false" autocomplete = "off" 
                 placeholder = 'Press Enter to Skip' aria-label="Type word here" 
