Validate html code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="An Animal Anagram Game">
-    <meta name=”keywords” content=”brain-training, conundrum, letters and words, anagram, game, guessing, words, scramble, animals” />
+    <meta name="keywords" content="brain, train, animal, anagram, game, words, scramble, anagram, guessing, conundrum,"> 
     <meta name="author" content="Jessica Clark">
     <title>Animal Word Scramble</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
@@ -31,7 +31,7 @@
             <div id="game-area">
                 <h1 id="heading-wordscramble">Animal Scramble</h1>
                 <input type="text" class ="input-text" id = "input-word" name = "inputtext" 
-                autocomplete = "off" spellcheck = "false" autocomplete = "off" 
+                autocomplete = "off" spellcheck = "false" 
                 placeholder = 'Press Enter to Skip' aria-label="Type word here" 
                 onkeypress="return (event.charCode > 64 && 
 	            event.charCode < 91) || (event.charCode > 96 && event.charCode < 123)">
@@ -42,7 +42,7 @@
                     <li class = "list-intro">Press Enter to Skip</li>
                     <li class = "list-intro">5 Turns then Play Again </li>
                 </ul>
-            <div>
+            </div>
 
 <!-- Code snippet to only allows letters in textbox from: 
 https://www.includehelp.com/code-snippets/allow-only-alphabets-in-input-field-in-javascript.aspx -->
